# llama-api-server

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt  update_version.sh  version.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
llama_api_server/: __main__.py  app.py  chat_engine.py  config.py  model_pool.py  utils.py
llama_api_server/models/: llama_cpp.py  pyllama.py  pyllama_quant.py
llama_api_server/models/completions/: llama_cpp.py
